[package]
authors = ["Pascal Schilp"]
edition = "2021"
name    = "napi-package-template"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "2"
regex = "1.10.3"
url = "2.5.0"
napi-derive = "2"
oxc_resolver = "0.5.4"
pathdiff = "0.2.1"
es-module-lexer = { git = "https://github.com/thepassle/es-module-lexer" }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
